--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
   <!-- 
     - preload images
   -->
-  <!-- <link rel="preload" as="image" href="./assets/images/sunmill-loc.png">
+  <link rel="preload" as="image" href="./assets/images/sunmill-loc.png">
   <link rel="preload" as="image" href="./assets/images/sunshine-loc.png">
-  <link rel="preload" as="image" href="./assets/images/heroLocation.png"> -->
+  <link rel="preload" as="image" href="./assets/images/heroLocation.png">
 
 </head>
 
@@ -44,10 +44,10 @@
     - #PRELOADER
   -->
 
-  <!-- <div class="preload" data-preaload>
+  <div class="preload" data-preaload>
     <div class="circle"></div>
     <p class="text">603</p>
-  </div> -->
+  </div>
 
 
 
