load speed decrease

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&family=Forum&display=swap" rel="stylesheet">
+
 
   <!-- 
     - custom css link
@@ -33,11 +33,11 @@
     - preload images
   -->
   <link rel="preload" as="image" href="./assets/images/sunmill-loc.png">
-  <link rel="preload" as="image" href="./assets/images/sunshine-loc.png">
-  <link rel="preload" as="image" href="./assets/images/heroLocation.png">
+  <!-- <link rel="preload" as="image" href="./assets/images/sunshine-loc.png">
+  <link rel="preload" as="image" href="./assets/images/heroLocation.png"> -->
 
 </head>
-
+<link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&family=Forum&display=swap" rel="stylesheet">
 <body id="top">
 
   <!-- 
