--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <!-- 
     - preload images
   -->
-  <link rel="preload" as="image" href="./assets/images/sunmill-loc.png">
+  <link rel="preload" as="image" href="./assets/images/sunmill-loc.webp">
   <!-- <link rel="preload" as="image" href="./assets/images/sunshine-loc.png">
   <link rel="preload" as="image" href="./assets/images/heroLocation.png"> -->
 
@@ -116,7 +116,7 @@
     <div class="container">
 
       <a href="#" class="logo">
-        <img src="./assets/images/603logo (1).png" width="160" height="50" alt="Grilli - Home">
+        <img src="./assets/images/603logo (1).webp" width="160" height="50" alt="Grilli - Home">
       </a>
 
       <nav class="navbar" data-navbar>
@@ -126,7 +126,7 @@
         </button>
 
         <a href="#" class="logo">
-          <img src="./assets/images/603logo (1).png" width="160" height="50" alt="Grilli - Home">
+          <img src="./assets/images/603logo (1).webp" width="160" height="50" alt="Grilli - Home">
         </a>
 
         <ul class="navbar-list">
@@ -231,7 +231,7 @@
           <li class="slider-item active" data-hero-slider-item>
           <div class="container">
             <div class="slider-bg">
-              <img src="./assets/images/sunmill-loc.png" width="1880" height="950" alt="" class="img-cover">
+              <img src="./assets/images/sunmill-loc.webp" width="1880" height="950" alt="" class="img-cover">
             </div>
 
             <p class="label-2 section-subtitle slider-reveal">Classic Elegance</p>
@@ -256,7 +256,7 @@
           <li class="slider-item" data-hero-slider-item>
 
             <div class="slider-bg">
-              <img src="./assets/images/heroLocation.png" width="1880" height="950" alt="" class="img-cover">
+              <img src="./assets/images/heroLocation.webp" width="1880" height="950" alt="" class="img-cover">
             </div>
 
             <p class="label-2 section-subtitle slider-reveal">delightful experience</p>
@@ -281,7 +281,7 @@
           <li class="slider-item" data-hero-slider-item>
 
             <div class="slider-bg">
-              <img src="./assets/images/sunshine-loc.png" width="1880" height="950" alt="" class="img-cover">
+              <img src="./assets/images/sunshine-loc.webp" width="1880" height="950" alt="" class="img-cover">
             </div>
 
             <p class="label-2 section-subtitle slider-reveal">amazing & elegence</p>
