--- a/index.html
+++ b/index.html
@@ -664,7 +664,7 @@
         <div class="footer-brand has-before has-after">
 
           <a href="#" class="logo">
-            <img src="./assets/images/603logo (1).png" width="160" height="50" loading="lazy" alt="grilli home">
+            <img src="./assets/images/603logo (1).webp" width="160" height="50" loading="lazy" alt="grilli home">
           </a>
 
           <address class="body-4">
