--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <!-- 
     - preload images
   -->
-  <link rel="preload" as="image" href="./assets/images/sunmill-loc_batcheditor_fotor.avif">
+  <link rel="preload" as="image" href="./assets/images/sunmill-loc_batcheditor_fotor (1).avif">
   <!-- <link rel="preload" as="image" href="./assets/images/sunshine-loc.png">
   <link rel="preload" as="image" href="./assets/images/heroLocation.png"> -->
 
@@ -231,7 +231,7 @@
           <li class="slider-item active" data-hero-slider-item>
           <div class="container">
             <div class="slider-bg">
-              <img src="./assets/images/sunmill-loc_batcheditor_fotor.avif" width="1880" height="950" alt="" class="img-cover">
+              <img src="./assets/images/sunmill-loc_batcheditor_fotor (1).avif" width="1880" height="950" alt="" class="img-cover">
             </div>
 
             <p class="label-2 section-subtitle slider-reveal">Classic Elegance</p>
