--- a/index.html
+++ b/index.html
@@ -337,8 +337,8 @@
           <h2 class="headline-1 section-title">We Offer Top Notch</h2>
 
           <p class="section-text">
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry lorem Ipsum has been the industrys
-            standard dummy text ever.
+            Elevate your workspace with our luxurious office interiors, where sophistication meets functionality.
+            Crafted with premium materials, sleek finishes, and tailored designs, each space exudes elegance and professionalism.
           </p>
 
           <ul class="grid-list">
@@ -440,9 +440,10 @@
             <h2 class="headline-1 section-title">603 vor Tells a Story</h2>
 
             <p class="section-text">
-              Lorem Ipsum is simply dummy text of the printingand typesetting industry lorem Ipsum has been the
-              industrys standard dummy text ever since the when an unknown printer took a galley of type and scrambled
-              it to make a type specimen book It has survived not only five centuries, but also the leap into.
+              We believe that a well-designed space has the power to transform lives. Our journey began with a simple idea—to create environments that inspire and reflect the personality and lifestyle of the people who live in them. What started as a passion for design has blossomed into a full-fledged interior design studio, offering customized solutions for homes, offices, and commercial spaces.
+              With a keen eye for detail, a love for creativity, and a deep understanding of spatial functionality, our team of designers works closely with each client to bring their vision to life. We understand that every space is unique, and so are the needs of those who use it. Whether it’s a cozy home makeover or a complete office redesign, we blend style with practicality to craft interiors that are not only beautiful but also functional.
+              From concept to completion, we are dedicated to creating spaces that are timeless, inviting, and truly one-of-a-kind. Our passion for design goes beyond aesthetics—we strive to enhance everyday experiences by transforming spaces into expressions of individuality, comfort, and elegance.
+              Join us on this creative journey and let’s build a space that speaks to you!
             </p>
 
             <div class="contact-label">Book Through Call</div>
