--- a/index.html
+++ b/index.html
@@ -440,9 +440,9 @@
             <h2 class="headline-1 section-title">603 vor Tells a Story</h2>
 
             <p class="section-text">
-              We believe that a well-designed space has the power to transform lives. Our journey began with a simple idea—to create environments that inspire and reflect the personality and lifestyle of the people who live in them. What started as a passion for design has blossomed into a full-fledged interior design studio, offering customized solutions for homes, offices, and commercial spaces.
-              With a keen eye for detail, a love for creativity, and a deep understanding of spatial functionality, our team of designers works closely with each client to bring their vision to life. We understand that every space is unique, and so are the needs of those who use it. Whether it’s a cozy home makeover or a complete office redesign, we blend style with practicality to craft interiors that are not only beautiful but also functional.
-              From concept to completion, we are dedicated to creating spaces that are timeless, inviting, and truly one-of-a-kind. Our passion for design goes beyond aesthetics—we strive to enhance everyday experiences by transforming spaces into expressions of individuality, comfort, and elegance.
+              Our journey began with a simple idea—to create environments that inspire and reflect the personality and lifestyle of the people who live in them. 
+              What started as a passion for design has blossomed into a full-fledged interior design studio, offering customized solutions for homes, offices, and commercial spaces.
+              With a keen eye for detail, a love for creativity, and a deep understanding of spatial functionality, our team of designers works closely with each client to bring their vision to life.
               Join us on this creative journey and let’s build a space that speaks to you!
             </p>
 
