Added favicon for better browser tab visibility

--- a/BOQ/indexBOQ.html
+++ b/BOQ/indexBOQ.html
@@ -1,5 +1,15 @@
-<!DOCTYPE html><html><head>
-<link rel="icon" href="favicon.ico" type="image/x-icon">
+<!DOCTYPE html><html>
+<head>
+
+  <!-- 
+    - favicon
+  -->
+
+  <link rel="apple-touch-icon" sizes="180x180" href="../assets/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="../assets/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="../assets/favicon/favicon-16x16.png">
+  <link rel="manifest" href="../assets/favicon/site.webmanifest">
+
 <title>Office furniture, cubicles, filing, seating, and so much more.</title>
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 <meta name="1088d4d69f5328112697df45bb3927db93801aaf" content="6c56856405de79b81c949afc19c4327d12ec83f2">
