--- a/indexLayout.html
+++ b/indexLayout.html
@@ -2,8 +2,19 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+
+  <!-- 
+    - favicon
+  -->
+
+  <link rel="apple-touch-icon" sizes="180x180" href="./assets/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon/favicon-16x16.png">
+  <link rel="manifest" href="./assets/favicon/site.webmanifest">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
   <title>Image Hover Transition</title>
+
   <style>
     body, html {
       margin: 0;
