--- a/index.html
+++ b/index.html
@@ -31,7 +31,11 @@
   <!-- 
     - custom css link
   -->
-  <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="./styles.css">
+  
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+
+
 
   <!-- 
     - preload images
@@ -52,64 +56,6 @@
     <div class="circle"></div>
     <p class="text">603</p>
   </div>
-
-
-
-
-
-  <!-- 
-    - #TOP BAR
-  -->
-
-  <div class="topbar">
-    <div class="container">
-
-      <address class="topbar-item">
-        <div class="icon">
-          <ion-icon name="location-outline" aria-hidden="true"></ion-icon>
-        </div>
-
-        <span class="span">
-          Makhija Arcade, 35th Rd, Khar, Khar West, Mumbai, Maharashtra 400052
-        </span>
-      </address>
-
-      <div class="separator"></div>
-
-      <div class="topbar-item item-2">
-        <div class="icon">
-          <ion-icon name="time-outline" aria-hidden="true"></ion-icon>
-        </div>
-
-        <span class="span">Daily : 8.00 am to 10.00 pm</span>
-      </div>
-
-      <a href="tel:+11234567890" class="topbar-item link">
-        <div class="icon">
-          <ion-icon name="call-outline" aria-hidden="true"></ion-icon>
-        </div>
-
-        <span class="span">	
-          +91 9136036603</span>
-      </a>
-
-      <div class="separator"></div>
-
-      <a href="mailto:	
-      sales@603thecoworkingspace.com" class="topbar-item link">
-        <div class="icon">
-          <ion-icon name="mail-outline" aria-hidden="true"></ion-icon>
-        </div>
-
-        <span class="span">	
-          sales@603thecoworkingspace.com</span>
-      </a>
-
-    </div>
-  </div>
-
-
-
 
 
   <!-- 
@@ -652,142 +598,62 @@
     </article>
   </main>
 
+  <!--Footer-->
 
+  <footer>
+    <div class="footer-container">
+        <!-- About Section -->
+        <div class="footer-about">
+            <h3>About</h3>
+            <p>Makhija Arcade, 35th Rd, Khar, Khar West, Mumbai, Maharashtra 400052</p>
+            <p>+91 9136036603</p>
+            <p>sales@603thecoworkingspace.com</p>
 
-
-
-  <!-- 
-    - #FOOTER
-  -->
-
-  <footer class="footer section has-bg-image text-center"
-    style="background-image: url('./assets/images/fae955e3-de29-4d6b-a41a-85563f86a931.avif')">
-    <div class="container">
-
-      <div class="footer-top grid-list">
-
-        <div class="footer-brand has-before has-after">
-
-          <a href="#" class="logo">
-            <img src="./assets/images/603logo (1).avif" width="160" height="50" loading="lazy" alt="grilli home">
-          </a>
-
-          <address class="body-4">
-            Makhija Arcade, 35th Rd, Khar, Khar West, Mumbai, Maharashtra 400052
-          </address>
-
-          <a href="mailto:booking@grilli.com" class="body-4 contact-link">booking@grilli.com</a>
-
-          <a href="tel:+88123123456" class="body-4 contact-link">Booking Request : +88-123-123456</a>
-
-          <p class="body-4">
-            Open : 09:00 am - 01:00 pm
-          </p>
-
-          <div class="wrapper">
-            <div class="separator"></div>
-            <div class="separator"></div>
-            <div class="separator"></div>
+            <div class="social-media">
+              <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
+              <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
+              <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
+              <a href="#" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
+              <a href="#" class="social-icon"><i class="fab fa-youtube"></i></a>
           </div>
+          
+        </div>
+        
 
-          <p class="title-1">Get News & Offers</p>
-
-          <p class="label-1">
-            Subscribe us & Get <span class="span">25% Off.</span>
-          </p>
-
-          <form action="" class="input-wrapper">
-            <div class="icon-wrapper">
-              <ion-icon name="mail-outline" aria-hidden="true"></ion-icon>
-
-              <input type="email" name="email_address" placeholder="Your email" autocomplete="off" class="input-field">
-            </div>
-
-            <button type="submit" class="btn btn-secondary">
-              <span class="text text-1">Subscribe</span>
-
-              <span class="text text-2" aria-hidden="true">Subscribe</span>
-            </button>
-          </form>
-
+        <!-- Latest Blogs-->
+        <div class="footer-news">
+            <h3>Latest Blogs</h3>
+            <ul>
+                <li>
+                    <a href="#">Even the all-powerful Pointing has no control about</a>
+                    <span>Oct. 16, 2019 - Admin</span>
+                </li>
+                <li>
+                    <a href="#">Even the all-powerful Pointing has no control about</a>
+                    <span>Oct. 16, 2019 - Admin</span>
+                </li>
+            </ul>
         </div>
 
-        <ul class="footer-list">
-
-          <li>
-            <a href="#" class="label-2 footer-link hover-underline">Home</a>
-          </li>
-
-          <li>
-            <a href="#" class="label-2 footer-link hover-underline">Menus</a>
-          </li>
-
-          <li>
-            <a href="#" class="label-2 footer-link hover-underline">About Us</a>
-          </li>
-
-          <li>
-            <a href="#" class="label-2 footer-link hover-underline">Our Chefs</a>
-          </li>
-
-          <li>
-            <a href="#" class="label-2 footer-link hover-underline">Contact</a>
-          </li>
-
-        </ul>
-
-        <ul class="footer-list">
-
-          <li>
-            <a href="#" class="label-2 footer-link hover-underline">Facebook</a>
-          </li>
-
-          <li>
-            <a href="#" class="label-2 footer-link hover-underline">Instagram</a>
-          </li>
-
-          <li>
-            <a href="#" class="label-2 footer-link hover-underline">Twitter</a>
-          </li>
-
-          <li>
-            <a href="#" class="label-2 footer-link hover-underline">Youtube</a>
-          </li>
-
-          <li>
-            <a href="#" class="label-2 footer-link hover-underline">Google Map</a>
-          </li>
-
-        </ul>
-
-      </div>
-
-      <div class="footer-bottom">
-
-        <p class="copyright">
-          &copy; 2024 . All Rights Reserved | Crafted by <a href="603thecoworkingspace.com"
-            target="_blank" class="link">603 The Coworking Space</a>
-        </p>
-
-      </div>
-
+        <!-- Information Section -->
+        <div class="footer-info">
+            <h3>Information</h3>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Spaces</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Images</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </div>
     </div>
-  </footer>
 
-
-
-
-
-  <!-- 
-    - #BACK TO TOP
-  -->
-
-  <a href="#top" class="back-top-btn active" aria-label="back to top" data-back-top-btn>
-    <ion-icon name="chevron-up" aria-hidden="true"></ion-icon>
-  </a>
-
-
-
+    <!-- Footer Bottom -->
+    <div class="footer-bottom">
+        <p>&copy; 2024. All rights reserved.</p>
+        <p>Crafted by <a href="https://603-work-ved.vercel.app/603thecoworkingspace.com">603 The Coworking Space</a></p>
+    </div>
+</footer>
 
 
   <!-- 
