--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <ion-icon name="location-outline" aria-hidden="true"></ion-icon>
         </div>
 
-        <span class="span">
+        <span class="span newSpan ">
           Makhija Arcade, 35th Rd, Khar, Khar West, Mumbai, Maharashtra 400052
         </span>
       </address>
@@ -81,7 +81,7 @@
           <ion-icon name="time-outline" aria-hidden="true"></ion-icon>
         </div>
 
-        <span class="span">Daily : 8.00 am to 10.00 pm</span>
+        <span class="span newSpan">Daily : 8.00 am to 10.00 pm</span>
       </div>
 
       <a href="tel:+11234567890" class="topbar-item link">
@@ -89,7 +89,7 @@
           <ion-icon name="call-outline" aria-hidden="true"></ion-icon>
         </div>
 
-        <span class="span">	
+        <span class="span newSpan">	
           +91 9136036603</span>
       </a>
 
@@ -101,7 +101,7 @@
           <ion-icon name="mail-outline" aria-hidden="true"></ion-icon>
         </div>
 
-        <span class="span">	
+        <span class="span newSpan">	
           sales@603thecoworkingspace.com</span>
       </a>
 
@@ -139,7 +139,7 @@
             <a href="#home" class="navbar-link hover-underline active">
               <div class="separator"></div>
 
-              <span class="span">Home</span>
+              <span class="span newSpan">Home</span>
             </a>
           </li>
 
@@ -147,7 +147,7 @@
             <a href="#menu" class="navbar-link hover-underline">
               <div class="separator"></div>
 
-              <span class="span">Spaces</span>
+              <span class="span newSpan">Spaces</span>
             </a>
           </li>
 
@@ -155,7 +155,7 @@
             <a href="#about" class="navbar-link hover-underline">
               <div class="separator"></div>
 
-              <span class="span">About Us</span>
+              <span class="span newSpan">About Us</span>
             </a>
           </li>
 
@@ -163,7 +163,7 @@
             <a href="#" class="navbar-link hover-underline">
               <div class="separator"></div>
 
-              <span class="span">Images</span>
+              <span class="span newSpan">Images</span>
             </a>
           </li>
 
@@ -171,7 +171,7 @@
             <a href="#" class="navbar-link hover-underline">
               <div class="separator"></div>
 
-              <span class="span">Contact</span>
+              <span class="span newSpan">Contact</span>
             </a>
           </li>
 
@@ -238,21 +238,21 @@
               <img src="./assets/images/sunmill-loc_batcheditor_fotor (1).avif" width="1880" height="950" alt="" class="img-cover">
             </div>
 
-            <p class="label-2 section-subtitle slider-reveal">Classic Elegance</p>
+            <p class="label-2 section-subtitle slider-reveal newHero2">Classic Elegance</p>
 
-            <h1 class="display-1 hero-title slider-reveal">
+            <h1 class="display-1 hero-title slider-reveal newHero">
               Create Your Space <br>
               that breathe creativity
             </h1>
 
-            <p class="body-2 hero-text slider-reveal">
+            <p class="body-2 hero-text slider-reveal newHero">
               Best working environment that suits your business needs.
             </p>
 
             <a href="#" class="btn btn-primary slider-reveal">
-              <span class="text text-1">Make Your Space</span>
+              <span class="text text-1 newHero">Make Your Space</span>
 
-              <span class="text text-2" aria-hidden="true">Make Your Space</span>
+              <span class="text text-2 newHero" aria-hidden="true">Make Your Space</span>
             </a>
 
           </li>
@@ -263,21 +263,21 @@
               <img src="./assets/images/heroLocation (1).avif" width="1880" height="950" alt="" class="img-cover">
             </div>
 
-            <p class="label-2 section-subtitle slider-reveal">delightful experience</p>
+            <p class="label-2 section-subtitle slider-revea newHero2">delightful experience</p>
 
-            <h1 class="display-1 hero-title slider-reveal">
+            <h1 class="display-1 hero-title slider-reveal newHero">
               Transforming offices into <br>
               vibrant stories
             </h1>
 
-            <p class="body-2 hero-text slider-reveal">
+            <p class="body-2 hero-text slider-reveal newHero">
               Spaces that are occupied by Corporates and Start ups, designed with your business in mind
             </p>
 
             <a href="#" class="btn btn-primary slider-reveal">
-              <span class="text text-1">Make Your Space</span>
+              <span class="text text-1 newHero">Make Your Space</span>
 
-              <span class="text text-2" aria-hidden="true">Make Your Space</span>
+              <span class="text text-2 newHero" aria-hidden="true">Make Your Space</span>
             </a>
 
           </li>
@@ -288,21 +288,21 @@
               <img src="./assets/images/sunshine-loc.webp" width="1880" height="950" alt="" class="img-cover">
             </div>
 
-            <p class="label-2 section-subtitle slider-reveal">amazing & elegence</p>
+            <p class="label-2 section-subtitle slider-reveal newHero2">amazing & elegence</p>
 
-            <h1 class="display-1 hero-title slider-reveal">
+            <h1 class="display-1 hero-title slider-reveal newHero ">
               Where Every Floor <br>
               tells a story
             </h1>
 
-            <p class="body-2 hero-text slider-reveal">
+            <p class="body-2 hero-text slider-reveal newHero">
               Come with your team & experience the joy of inspiring office design.
             </p>
 
             <a href="#" class="btn btn-primary slider-reveal">
-              <span class="text text-1">Make Your Space</span>
+              <span class="text text-1 newHero">Make Your Space</span>
 
-              <span class="text text-2" aria-hidden="true">Make Your Space</span>
+              <span class="text text-2 newHero" aria-hidden="true">Make Your Space</span>
             </a>
 
           </li>
@@ -320,7 +320,7 @@
         <a href="indexLayout.html" class="hero-btn has-after">
           <img src="./assets/images/hero-icon.png" width="48" height="48" alt="booking icon">
 
-          <span class="label-2 text-center span">Book A Space</span>
+          <span class="label-2 text-center span newHero">Book A Space</span>
         </a>
 
       </section>
