added a basic Fade in animatons for sections, added a scroll viewer at the top

--- a/index.html
+++ b/index.html
@@ -60,8 +60,11 @@
   <!-- 
     - #TOP BAR
   -->
-
+  <div class="scroll-watcher"> <!--Scroll Element Div-->
+    <!-- <p>Hello Everyone</p> -->
+  </div>
   <div class="topbar">
+    
     <div class="container">
 
       <address class="topbar-item">
