fixed scrolling to images issue

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
           </li>
 
           <li class="navbar-item">
-            <a href="#" class="navbar-link hover-underline">
+            <a href="#images" class="navbar-link hover-underline">
               <div class="separator"></div>
 
               <span class="span newSpan">Images</span>
@@ -336,7 +336,7 @@
         - #SERVICE
       -->
 
-      <section class="section service bg-black-10 text-center" aria-label="service">
+      <section class="section service bg-black-10 text-center" aria-label="service" id="menu">
         <div class="container">
 
           <p class="section-subtitle label-2">Luxurious Office Interiors</p>
@@ -569,12 +569,12 @@
         - #EVENT
       -->
 
-      <section class="section event bg-black-10" aria-label="event">
+      <section class="section event bg-black-10" aria-label="event" id="images">
         <div class="container">
 
           <p class="section-subtitle label-2 text-center">Recent Updates</p>
 
-          <h2 class="section-title headline-1 text-center">Upcoming Offices</h2>
+          <h2 class="section-title headline-1 text-center">Upcoming Offices </h2>
 
           <ul class="grid-list">
 
