Improved image fetching performance using CDN Sirv

--- a/BOQ/indexBOQ.html
+++ b/BOQ/indexBOQ.html
@@ -533,7 +533,9 @@ Room type
                                           </td>
                                           <td valign="top" style="width: 40px;">
 												<a onclick="javascript:return false;" class="preview" href="https://www.cubicles.com/assets/admin/img/budgetcalculator/categories/2x4x67-.jpg">
-													<img src="images/2x4x67-.jpg" width="45" height="50" border="0">
+													<!-- <img src="images/2x4x67-.jpg" width="45" height="50" border="0"> -->
+
+                          <img src="https://abhiram.sirv.com/BOQ/2x4x67-.jpg" width="45" height="50" border="0">
 												</a>
 											</td>
                                           <td style="background-color:#EEEEEE ; padding:3px 0 3px 7px" width="90" align="left" valign="middle">
@@ -573,7 +575,9 @@ Room type
                                           </td>
                                           <td valign="top" style="width: 40px;">
 												<a onclick="javascript:return false;" class="preview" href="https://www.cubicles.com/assets/admin/img/budgetcalculator/categories/8x8x67-.jpg">
-													<img src="images/8x8x67-.jpg" width="45" height="50" border="0">
+													<!-- <img src="images/8x8x67-.jpg" width="45" height="50" border="0"> -->
+
+                          <img src="https://abhiram.sirv.com/BOQ/8x8x67-.jpg" width="45" height="50" border="0">
 												</a>
 											</td>
                                           <td style="background-color: #FFFFFF; padding:3px 0 3px 7px" width="90" align="left" valign="middle">
@@ -613,7 +617,9 @@ Room type
                                           </td>
                                           <td valign="top" style="width: 40px;">
 												<a onclick="javascript:return false;" class="preview" href="https://www.cubicles.com/assets/admin/img/budgetcalculator/categories/5x6x67-.jpg">
-													<img src="images/5x6x67-.jpg" width="45" height="50" border="0">
+													<!-- <img src="images/5x6x67-.jpg" width="45" height="50" border="0"> -->
+
+                          <img src="https://abhiram.sirv.com/BOQ/5x6x67-.jpg" width="45" height="50" border="0">
 												</a>
 											</td>
                                           <td style="background-color:#EEEEEE ; padding:3px 0 3px 7px" width="90" align="left" valign="middle">
@@ -717,7 +723,9 @@ Room type
                                           </td>
                                           <td valign="top" style="width: 40px;">
 												<a onclick="javascript:return false;" class="preview" href="https://www.cubicles.com/assets/admin/img/budgetcalculator/categories/Executive-Office.jpg">
-													<img src="images/Executive-Office.jpg" width="45" height="50" border="0">
+													<!-- <img src="images/Executive-Office.jpg" width="45" height="50" border="0"> -->
+
+                          <img src="https://abhiram.sirv.com/BOQ/Executive-Office.jpg" width="45" height="50" border="0">
 												</a>
 											</td>
                                           <td style="background-color:#EEEEEE ; padding:3px 0 3px 7px" width="90" align="left" valign="middle">
@@ -757,7 +765,9 @@ Room type
                                           </td>
                                           <td valign="top" style="width: 40px;">
 												<a onclick="javascript:return false;" class="preview" href="https://www.cubicles.com/assets/admin/img/budgetcalculator/categories/Small-Office(9x9).jpg">
-													<img src="images/Small-Office%289x9%29.jpg" width="45" height="50" border="0">
+													<!-- <img src="images/Small-Office%289x9%29.jpg" width="45" height="50" border="0"> -->
+
+                          <img src="https://abhiram.sirv.com/BOQ/Small-Office(9x9).jpg" width="45" height="50" border="0">
 												</a>
 											</td>
                                           <td style="background-color: #FFFFFF; padding:3px 0 3px 7px" width="90" align="left" valign="middle">
@@ -797,7 +807,9 @@ Room type
                                           </td>
                                           <td valign="top" style="width: 40px;">
 												<a onclick="javascript:return false;" class="preview" href="https://www.cubicles.com/assets/admin/img/budgetcalculator/categories/Large-Office(11x16).jpg">
-													<img src="images/Large-Office%2811x16%29.jpg" width="45" height="50" border="0">
+													<!-- <img src="images/Large-Office%2811x16%29.jpg" width="45" height="50" border="0"> -->
+
+                          <img src="https://abhiram.sirv.com/BOQ/Large-Office(11x16).jpg" width="45" height="50" border="0">
 												</a>
 											</td>
                                           <td style="background-color:#EEEEEE ; padding:3px 0 3px 7px" width="90" align="left" valign="middle">
@@ -837,7 +849,9 @@ Room type
                                           </td>
                                           <td valign="top" style="width: 40px;">
 												<a onclick="javascript:return false;" class="preview" href="https://www.cubicles.com/assets/admin/img/budgetcalculator/categories/SConferenceroom.jpg">
-													<img src="images/SConferenceroom.jpg" width="45" height="50" border="0">
+													<!-- <img src="images/SConferenceroom.jpg" width="45" height="50" border="0"> -->
+
+                          <img src="https://abhiram.sirv.com/BOQ/SConferenceroom.jpg" width="45" height="50" border="0">
 												</a>
 											</td>
                                           <td style="background-color: #FFFFFF; padding:3px 0 3px 7px" width="90" align="left" valign="middle">
@@ -877,7 +891,9 @@ Room type
                                           </td>
                                           <td valign="top" style="width: 40px;">
 												<a onclick="javascript:return false;" class="preview" href="https://www.cubicles.com/assets/admin/img/budgetcalculator/categories/LConferenceroom.jpg">
-													<img src="images/LConferenceroom.jpg" width="45" height="50" border="0">
+													<!-- <img src="images/LConferenceroom.jpg" width="45" height="50" border="0"> -->
+
+                          <img src="https://abhiram.sirv.com/BOQ/LConferenceroom.jpg" width="45" height="50" border="0">
 												</a>
 											</td>
                                           <td style="background-color:#EEEEEE ; padding:3px 0 3px 7px" width="90" align="left" valign="middle">
@@ -917,7 +933,9 @@ Room type
                                           </td>
                                           <td valign="top" style="width: 40px;">
 												<a onclick="javascript:return false;" class="preview" href="https://www.cubicles.com/assets/admin/img/budgetcalculator/categories/Small-Reception.jpg">
-													<img src="images/Small-Reception.jpg" width="45" height="50" border="0">
+													<!-- <img src="images/Small-Reception.jpg" width="45" height="50" border="0"> -->
+
+                          <img src="https://abhiram.sirv.com/BOQ/Small-Reception.jpg" width="45" height="50" border="0">
 												</a>
 											</td>
                                           <td style="background-color: #FFFFFF; padding:3px 0 3px 7px" width="90" align="left" valign="middle">
@@ -957,7 +975,9 @@ Room type
                                           </td>
                                           <td valign="top" style="width: 40px;">
 												<a onclick="javascript:return false;" class="preview" href="https://www.cubicles.com/assets/admin/img/budgetcalculator/categories/Large-Reception.jpg">
-													<img src="images/Large-Reception.jpg" width="45" height="50" border="0">
+													<!-- <img src="images/Large-Reception.jpg" width="45" height="50" border="0"> -->
+
+                          <img src="https://abhiram.sirv.com/BOQ/Large-Reception.jpg" width="45" height="50" border="0">
 												</a>
 											</td>
                                           <td style="background-color:#EEEEEE ; padding:3px 0 3px 7px" width="90" align="left" valign="middle">
@@ -997,7 +1017,9 @@ Room type
                                           </td>
                                           <td valign="top" style="width: 40px;">
 												<a onclick="javascript:return false;" class="preview" href="https://www.cubicles.com/assets/admin/img/budgetcalculator/categories/Break-Room.jpg">
-													<img src="images/Break-Room.jpg" width="45" height="50" border="0">
+													<!-- <img src="images/Break-Room.jpg" width="45" height="50" border="0"> -->
+
+                          <img src="https://abhiram.sirv.com/BOQ/Break-Room.jpg" width="45" height="50" border="0">
 												</a>
 											</td>
                                           <td style="background-color: #FFFFFF; padding:3px 0 3px 7px" width="90" align="left" valign="middle">
@@ -1101,7 +1123,9 @@ Room type
                                           </td>
                                           <td valign="top" style="width: 40px;">
 												<a onclick="javascript:return false;" class="preview" href="https://www.cubicles.com/assets/admin/img/budgetcalculator/categories/Chair.jpg">
-													<img src="images/Chair.jpg" width="45" height="50" border="0">
+													<!-- <img src="images/Chair.jpg" width="45" height="50" border="0"> -->
+
+                          <img src="https://abhiram.sirv.com/BOQ/Chair.jpg" width="45" height="50" border="0">
 												</a>
 											</td>
                                           <td style="background-color:#EEEEEE ; padding:3px 0 3px 7px" width="90" align="left" valign="middle">
