--- a/indexLayout.html
+++ b/indexLayout.html
@@ -125,22 +125,32 @@
   <div class="container">
     <div class="image-container" data-text="Combination">
       <a href="./BOQ/indexBOQ.html">
-      <img src="./image/Combination.2a9f876caf5f775d9087.jpg" alt="Image 1">
+      <!-- <img src="./image/Combination.2a9f876caf5f775d9087.jpg" alt="Image 1"> -->
+      
+      <img src="https://abhiram.sirv.com/img/Combination.2a9f876caf5f775d9087.jpg?format=webp" alt="Image 1">
+
     </a>
     </div>
     <div class="image-container" data-text="Coworking">
       <a href="./BOQ/indexBOQ.html">
-      <img src="./image/Coworking.74e92a69fdb3e29e43b9.jpg" alt="Image 2">
+      <!-- <img src="./image/Coworking.74e92a69fdb3e29e43b9.jpg" alt="Image 2"> -->
+      <img src="https://abhiram.sirv.com/img/Coworking.74e92a69fdb3e29e43b9.jpg?format=webp"alt="Image 2">
+
     </a>
     </div>
     <div class="image-container" data-text="Minimal">
       <a href="./BOQ/indexBOQ.html">
-      <img src="./image/Minimal.6070a8a8ec2ed28895e4.jpg" alt="Image 3">
+      <!-- <img src="./image/Minimal.6070a8a8ec2ed28895e4.jpg" alt="Image 3"> -->
+      <img src="https://abhiram.sirv.com/img/Minimal.6070a8a8ec2ed28895e4.jpg?format=webp" alt="Image 3">
+
     </a>
     </div>
     <div class="image-container" data-text="Open Plan">
       <a href="./BOQ/indexBOQ.html">
-      <img src="./image/Open Plan.77a43648aa1d556dca34.jpg" alt="Image 4">
+      <!-- <img src="./image/Open Plan.77a43648aa1d556dca34.jpg" alt="Image 4"> -->
+      
+      <img src="https://abhiram.sirv.com/img/Open%20Plan.77a43648aa1d556dca34.jpg?format=webp" alt="Image 4">
+
     </a>
     </div>
   </div>
